# hierarkey

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  deny.toml  docker-compose.yaml  hierarkey-config.toml.example  rustfmt.toml
hierarkey-cli/: Cargo.toml  build.rs
hierarkey-cli/src/: cli.rs  commands.rs  config.rs  error.rs  http.rs  lib.rs  utils.rs  values.rs
hierarkey-cli/src/commands/: account.rs  audit.rs  auth.rs  license.rs  masterkey.rs  mfa.rs  namespace.rs  pat.rs  rbac.rs  rekey.rs  rewrap.rs  secret.rs  status.rs  template.rs
hierarkey-cli/src/commands/account/: change_password.rs  create.rs  delete.rs  demote.rs  describe.rs  disable.rs  enable.rs  federated_identity.rs  list_search.rs  lock.rs  promote.rs  set_cert.rs  unlock.rs  update.rs
hierarkey-cli/src/commands/audit/: events.rs  verify.rs
hierarkey-cli/src/commands/auth/: federated.rs  list_providers.rs  login.rs  refresh.rs  sa_token.rs  whoami.rs
hierarkey-cli/src/commands/masterkey/: activate.rs  create.rs  delete.rs  describe.rs  lock.rs  pkcs11_tokens.rs  status.rs  unlock.rs
hierarkey-cli/src/commands/mfa/: backup_codes.rs  confirm.rs  disable.rs  enroll.rs  verify.rs
hierarkey-cli/src/commands/namespace/: create.rs  delete.rs  describe.rs  disable.rs  enable.rs  list.rs  search.rs  update.rs
hierarkey-cli/src/commands/pat/: create.rs  list.rs  revoke.rs  show.rs
hierarkey-cli/src/commands/rbac/: bind.rs  bindings.rs  explain.rs  role.rs  rule.rs  unbind.rs
hierarkey-cli/src/commands/rekey/: kek.rs
hierarkey-cli/src/commands/rewrap/: dek.rs  kek.rs
hierarkey-cli/src/commands/secret/: activate.rs  annotate.rs  create.rs  delete.rs  describe.rs  disable.rs  enable.rs  list.rs  restore.rs  reveal.rs  revise.rs  search.rs  update.rs
hierarkey-cli/src/commands/template/: render.rs
hierarkey-cli/src/utils/: formatting.rs  tabled.rs
hierarkey-core/: Cargo.toml
hierarkey-core/src/: api.rs  error.rs  labels.rs  lib.rs  license.rs  metadata.rs  resources.rs
hierarkey-core/src/api/: response.rs  search.rs  status.rs
hierarkey-core/src/api/search/: label.rs  query.rs  time.rs
hierarkey-core/src/error/: auth.rs  ck_error.rs  crypto.rs  rbac.rs  validation.rs
hierarkey-core/src/resources/: account.rs  key_string.rs  namespace_string.rs  revision.rs  secret_ref.rs
hierarkey-server/: Cargo.toml  build.rs
hierarkey-server/migrations/: 0000_setup.sql  0010_account.sql  0020_masterkey.sql  0030_kek.sql  0031_namespace.sql  0032_namespace_kek.sql  0040_tokens.sql  0041_token_scope_refresh.sql  0050_secrets.sql  0051_secret_revisions.sql  0060_rbac.sql  0061_rbac_roles.sql  0062_rbac_rules.sql  0063_rbac_role_rules.sql  0064_rbac_account_rules.sql  0065_rbac_account_roles.sql  0066_rbac_population.sql  0067_rbac_platform_target.sql  0070_brute_force_lockout.sql  0071_rbac_soft_delete.sql  0072_pat_client_ip.sql  0073_masterkey_draining.sql  0074_masterkey_pending.sql  0075_rename_token_scope_to_purpose.sql  0076_rename_destroyed_to_deleted.sql  0077_fix_namespace_unique_index.sql  0078_platform_license.sql  0079_account_client_cert.sql  0080_mfa_backup_codes.sql  0081_audit_events.sql  0082_secrets_partial_unique.sql  0083_secret_created_updated_by.sql  0084_federated_identities.sql  0085_namespace_created_updated_by.sql  0086_signing_key.sql  0087_row_hmac_columns.sql  0088_account_status_tampered.sql  0089_rbac_role_rules_hmac.sql  0090_pat_hmac.sql  0091_auth_nonces.sql
hierarkey-server/src/: api.rs  audit_context.rs  auth.rs  global.rs  http_server.rs  lib.rs  manager.rs  migrations.rs  preview.rs  rbac.rs  service.rs  startup.rs  task_manager.rs
hierarkey-server/src/api/: v1.rs
hierarkey-server/src/api/v1/: dto.rs
hierarkey-server/src/auth/: ed25519.rs
hierarkey-server/src/federated/: k8s_tokenreview.rs  mod.rs  oidc.rs
hierarkey-server/src/global/: aes_gcm.rs  config.rs  db.rs  keys.rs  resource.rs  row_hmac.rs  short_id.rs  test_utils.rs  utils.rs  uuid_id.rs
hierarkey-server/src/global/utils/: file.rs  password.rs  sql.rs
hierarkey-server/src/http_server/: api_error.rs  auth_user.rs  db_nonce_store.rs  extractors.rs  federated_auth_provider.rs  handlers.rs  mfa_provider.rs  middleware.rs  mtls_provider.rs  nonce_cache.rs
hierarkey-server/src/http_server/handlers/: account.rs  account_response.rs  audit.rs  auth.rs  auth_response.rs  common.rs  healthz.rs  index.rs  masterkey.rs  masterkey_response.rs  namespace.rs  pat.rs  rbac.rs  (+7 more)
hierarkey-server/src/manager/: account.rs  federated_identity.rs  kek.rs  masterkey.rs  namespace.rs  rbac.rs  secret.rs  signing_key.rs  token.rs
hierarkey-server/src/rbac/: match_kind.rs  parser.rs  pattern.rs  permission.rs  policy_effect.rs  spec.rs  target.rs  target_kind.rs  where_.rs
hierarkey-server/src/service/: account.rs  audit.rs  auth.rs  kek.rs  license.rs  masterkey.rs  namespace.rs  rbac.rs  secret.rs  signing_key_slot.rs  token.rs
testsuite/test-suite/: pyproject.toml  runner.py
testsuite/test-suite/helpers/: __init__.py  helpers.py
testsuite/test-suite/hkey/: __init__.py  client.py
testsuite/test-suite/tests/: conftest.py  test_account.py  test_account_full.py  test_account_gaps.py  test_audit_gaps.py  test_auth.py  test_auth_adv.py  test_auth_full.py  test_auth_gaps.py  test_crypto_gaps.py  test_default_commands.py  test_edge_cases_gaps.py  test_masterkey_gaps.py  test_namespace.py  test_namespace_full.py  test_namespace_gaps.py  test_pat.py  test_pat_gaps.py  test_rbac.py  test_rbac_full.py  test_rbac_gaps.py  test_rotation.py  test_secret_create.py  test_secret_gaps.py  test_secret_reveal.py  test_server.py
(+221 files in other folders)
