[package]
name = "hkey"
version = "0.4.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Joshua Thijssen <jthijssen@hierarkey.com>"]
description = "Secure CLI tool for the Hierarkey secret manager"
license-file = "../LICENSE"
repository = "https://github.com/hierarkey/hierarkey"
publish = false

[lib]
name = "hkey"
path = "src/lib.rs"

[[bin]]
name = "hkey"
path = "src/bin/main.rs"

[dependencies]
hierarkey_core = { path = "../hierarkey-core" }
hierarkey_server = { path = "../hierarkey-server" }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.10.4"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.5.66"
hex = "0.4.3"
hyper-util = "0.1.20"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "blocking", "rustls", "query", "form"], default-features = false }
rustls = "0.23.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.20", features = ["derive", "tabled_derive"] }
tempfile = "3.27.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
zeroize = { version = "1.8", features = ["zeroize_derive", "serde"] }

#[target.'cfg(unix)'.dependencies]
#nix = { version = "0.30.1", features = ["fs"] }

[dev-dependencies]
mockito = "1"

[build-dependencies]
chrono = "0.4"
