[package]
name = "hierarkey_server"
version = "0.4.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Joshua Thijssen <jthijssen@hierarkey.com>"]
description = "Hierarkey Server is the server component of the hierarkey secret manager."
license-file = "../LICENSE"
repository = "https://github.com/hierarkey/hierarkey"
homepage = "https://github.com/hierarkey/hierarkey"
documentation = "https://github.com/hierarkey/hierarkey"
keywords = ["server", "secret-management", "hierarkey"]
categories = ["security"]
publish = false  # Prevents accidental publishing to crates.io

[lib]
name = "hierarkey_server"
path = "src/lib.rs"

[[bin]]
name = "hierarkey"
path = "src/bin/main.rs"

[features]
default = ["preview"]
preview = []

[dev-dependencies]
mockito = "1"
rcgen = "0.14"

[dependencies]
aes-gcm = { version = "0.10", features = ["aes", "zeroize"] }
anyhow = "1.0.102"
argon2 = "0.6.0-rc.8"
async-trait = "0.1.89"
axum = { version = "0.8", features = ["json", "macros"] }
governor = "0.10"
metrics = "0.24"
ipnet = "2"
axum-server = { version = "0.8", features = ["tls-rustls"] }
base64 = "0.22"
blake3 = "1.8.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
config = {  version = "0.15.22", default-features = false, features = ["toml"] }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["pkcs8", "pem", "rand_core"] }
hex = "0.4.3"
hierarkey_core = { path = "../hierarkey-core" }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
http-body-util = "0.1.3"
nom = "8.0.0"
parking_lot = "0.12.5"
password-hash = "0.6"
rand = "0.10.0"
rand_core = { version = "0.10.0", features = [] }
ring = "0.17.14"
rpassword = "7.4.0"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
url = "2"
x509-parser = "0.18"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
subtle = "2.6.1"
tempfile = "3.27.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util", "limit", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "limit", "timeout"] }
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ulid = { version = "1.2.1", features = ["uuid"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
zeroize = { version = "1.8", features = ["zeroize_derive", "serde"] }
