[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Joshua Thijssen <jthijssen@noxlogic.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.2"
requests = "^2.31"
cryptography = ">=41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]